--- a/Contenido_BaseDeDatos/ACCESS_DISEÑO/indexContenido.html
+++ b/Contenido_BaseDeDatos/ACCESS_DISEÑO/indexContenido.html
@@ -70,13 +70,13 @@
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
     <div class="profile-img">
-      <img src="assets/img/my-profile-img.jpg" alt="" class="img-fluid rounded-circle">
+      <img src="img/Logo_Access.png" alt="" class="img-fluid rounded-circle">
     </div>
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
       <!-- Uncomment the line below if you also wish to use an image logo -->
       <!-- <img src="assets/img/logo.png" alt=""> -->
-      <h1 class="sitename">Alex Smith</h1>
+      <h1 class="sitename">Bases de Datos</h1>
     </a>
 
     <div class="social-links text-center">
@@ -89,12 +89,12 @@
 
     <nav id="navmenu" class="navmenu">
       <ul>
-        <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
-        <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
-        <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
-        <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
-        <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Services</a></li>
-        <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+        <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i>Inicio</a></li>
+        <li><a href="#about"><i class="bi bi-person navicon"></i>Conceptos Básicos</a></li>
+        <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Base de Datos de Ejemplo</a></li>
+        <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Videos Tutoriales</a></li>
+        <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Desafios y Retos</a></li>
+        <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span> Encuestas </span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
           <ul>
             <li><a href="#">Dropdown 1</a></li>
             <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -111,7 +111,7 @@
             <li><a href="#">Dropdown 4</a></li>
           </ul>
         </li>
-        <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
+        <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Examen final </a></li>
       </ul>
     </nav>
 
@@ -124,27 +124,26 @@
   <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
       <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-          <h2 class="m-0 text-primary"><i class="fa fa-book me-3"></i>eLEARNING</h2>
+          <h2 class="m-0 text-primary"><i class="fa fa-book me-3"></i>BASE DE DATOS ACCESS</h2>
       </a>
       <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
           <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
           <div class="navbar-nav ms-auto p-4 p-lg-0">
-              <a href="../indexHOME.html" class="nav-item nav-link">Home</a>
-              <a href="about.html" class="nav-item nav-link">About</a>
-              <a href="courses.html" class="nav-item nav-link">Courses</a>
+              <a href="" class="nav-item nav-link">Home</a>
+              <a href="about.html" class="nav-item nav-link"></a>
+              <a href="courses.html" class="nav-item nav-link"></a>
               <div class="nav-item dropdown">
-                  <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
+                  <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Curso</a>
                   <div class="dropdown-menu fade-down m-0">
-                      <a href="team.html" class="dropdown-item">Our Team</a>
-                      <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                      <a href="404.html" class="dropdown-item">404 Page</a>
+                      <a href="team.html" class="dropdown-item">Programación</a>
+                      <a href="testimonial.html" class="dropdown-item">Redes</a>
+                      <a href="404.html" class="dropdown-item">Base de Datos</a>
                   </div>
               </div>
-              <a href="contact.html" class="nav-item nav-link">Contact</a>
           </div>
-          <a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Join Now<i class="fa fa-arrow-right ms-3"></i></a>
+          <a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Conoce a cada Grupo<i class="fa fa-arrow-right ms-3"></i></a>
       </div>
   </nav>
   <!-- Navbar End -->
@@ -152,11 +151,11 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in" class="">
+      <img src="img/Fondo_Access.jpg" alt="" data-aos="fade-in" class="">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <h2 style="color: white;">Alex Smith</h2>
-        <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer">Designer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+        <h2 style="color: white;">Bienvenido</h2>
+        <p> A su curso Access: <span class="typed" data-typed-items="Diseño, Creación, Gestión"> </span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
       </div>
 
     </section><!-- /Hero Section -->
